updated Landing page: Added 'Life Outside' section

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,6 +59,12 @@ body {
   .g30 {
     color: #ebebec;
   }
+  .g50{
+    color: #424344;
+  }
+  .g80 {
+    color: #989999 ;
+  }
   .g90 {
     color: #898a8a;
   }
