--- a/app/globals.css
+++ b/app/globals.css
@@ -50,6 +50,9 @@ body {
   .g10 {
     color: #fafafa;
   }
+  .grey-g20 {
+    background-color: #161718;
+  }
   .g20 {
     background-color: #f5f5f5;
   }
@@ -61,6 +64,9 @@ body {
   }
   .g50 {
     color: #424344;
+  }
+  .g70 {
+    color: #A7A7A8
   }
   .g80 {
     color: #989999;
