--- a/app/globals.css
+++ b/app/globals.css
@@ -329,7 +329,7 @@ body {
   font-style: normal;
   font-weight: 400;
   line-height: 150%; /* 24px */
-  letter-spacing: 0.64px;
+  letter-spacing: .012em;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -342,11 +342,61 @@ body {
   gap: 12px;
 }
 
+.phc-bimage {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.phc-bimage > div {
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.theChallenge {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.ms-padding {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.designProcess {
+  display: flex;
+  flex-direction: column;
+  gap:24px;
+}
+
+.nopad {
+  padding-left: 0!important;
+  padding-right: 0!important;
+}
+
 @media only screen and (min-width: 768px) {
 }
 
 @media only screen and (min-width: 1024px) {
   /* For collect Africa */
+
+.ms-padding, .nopad {
+  padding-left: 238px!important;
+  padding-right: 244px!important;
+}
+
+.designProcess {
+  gap:40px;
+}
+  .theChallenge {
+    gap: 72px;
+  }
+
   .phc-bcont {
     display: flex;
     flex-direction: column;
