updated Flow Finance Page

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,6 +56,9 @@ body {
   .g20 {
     background-color: #f5f5f5;
   }
+  .g20-alt {
+    background-color: #ebebec;
+  }
   .g40 {
     color: #dfdfdf;
   }
